examples/negative/parser_syntax/parse_effect_bad_no_ret.err.expected
error: expected `:` before operation return type
  --> examples/negative/parser_syntax/parse_effect_bad_no_ret.kai:10:1
     |
  10 | }
     | ^
